# gatefs

./: .gitignore  CONTEXT.md  Cargo.toml  PLAN.md  README.md  TODO.md
.github/: dependabot.yml
PLAN/: complete-full-plan.md
docs/: README.md
docs/adr/: 0001-foreground-sandbox-sessions.md  0002-operation-events-and-pending-authorization.md  0003-read-write-authorization-scope.md  0004-xattr-passthrough-policy.md  0005-layered-policy-and-metadata-overlays.md  0006-explicit-passthrough-and-metadata-protection.md  0007-bypass-and-effect-based-authorization.md
docs/user-guide/: ai-agent-wrapper.md  commands.md  concepts.md  development.md  metadata.md  policy.md  runtime-and-limits.md
example/: pi-gatefs.sh  pi-sandbox.sh
src/: cli.rs  fs.rs  hostfs.rs  ipc.rs  lib.rs  log.rs  overlay.rs  runtime.rs  session.rs  state.rs  tui.rs
tests/: behavior.rs  cli_session.rs  fs_errors.rs  fuse_behavior.rs  ipc.rs  tui.rs
tests/common/: mod.rs
