[package]
name = "gatefs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
fuser = "0.17"
glob = "0.3"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "2.0"
signal-hook = "0.4"
sysinfo = "0.38.4"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[lib]
name = "gatefs"
path = "src/lib.rs"

[[bin]]
name = "gatefs"
path = "src/bin/gatefs.rs"


[[bin]]
name = "gatefs-access-tui"
path = "src/bin/gatefs-access-tui.rs"
